%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  serializedVersion: 2
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: TheInsaneTentacleController
  m_AnimatorParameters:
  - m_Name: bMove
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bIdle
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IsDying
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bAttack
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: fAttackID
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: iDeathAnimIndex
    m_Type: 3
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: tRespawn
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 1107674775407834486}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
  - serializedVersion: 3
    m_Name: Death Layer
    m_StateMachine: {fileID: 1107077345471493318}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 1
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1107 &1107674775407834486
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 1102724084280757801}
  m_States:
  - {fileID: 1102798857401838544}
  - {fileID: 1102215305790376809}
  - {fileID: 1102724084280757801}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
  - first: {fileID: 1102798857401838544}
    second:
    - {fileID: 1101673390324832512}
  - first: {fileID: 1102215305790376809}
    second:
    - {fileID: 1101050837074181272}
  - first: {fileID: 1102724084280757801}
    second:
    - {fileID: 1101164069250051534}
  - first: {fileID: 0}
    second:
    - {fileID: 1101360409461043400}
  m_MotionSetCount: 0
  m_AnyStatePosition: {x: 0, y: -250, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1102 &1102798857401838544
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle_01
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: f744ca6be100cfa4d93ea75673e2a515, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101673390324832512
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102215305790376809}
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bAttack
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102215305790376809
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Melee_01
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 206742248845283994}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: TagMeleeAttack
--- !u!206 &206742248845283994
BlendTree:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: BlendTree
  m_Childs:
  - m_Motion: {fileID: 7400000, guid: ef26416d86b241c4e9b4a68c81e1cc96, type: 2}
    m_Threshold: 0
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 0
    m_Mirror: 0
  - m_Motion: {fileID: 7400000, guid: 8af85c2477ba4194696cc9802199f307, type: 2}
    m_Threshold: 1
    m_Position: {x: 0, y: 0}
    m_TimeScale: 1
    m_CycleOffset: 0
    m_IsAnim: 0
    m_Mirror: 0
  m_BlendParameter: fAttackID
  m_BlendParameterY:
  m_MinThreshold: 0
  m_MaxThreshold: 1
  m_UseAutomaticThresholds: 0
  m_BlendType: 0
--- !u!1101 &1101050837074181272
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102798857401838544}
  m_TransitionDuration: 0.125
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: bAttack
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102724084280757801
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Spawn
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: d440d2113e2aec64983035fba25935e3, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Spawn
--- !u!1101 &1101164069250051534
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102798857401838544}
  m_TransitionDuration: 0.070754714
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent:
    m_EventTreshold: 0
    m_ExitTime: 0.98
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101360409461043400
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102724084280757801}
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: tRespawn
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1107 &1107077345471493318
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Death Layer
  m_DefaultState: {fileID: 1102304175694609578}
  m_States:
  - {fileID: 1102257278810732253}
  - {fileID: 1102304175694609578}
  - {fileID: 1102776463251826760}
  - {fileID: 1102073249736913588}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
  - first: {fileID: 1102257278810732253}
    second: []
  - first: {fileID: 1102304175694609578}
    second:
    - {fileID: 1101687438770511053}
    - {fileID: 1101818860798856916}
    - {fileID: 1101342928645368159}
  - first: {fileID: 1102776463251826760}
    second: []
  - first: {fileID: 1102073249736913588}
    second: []
  - first: {fileID: 0}
    second:
    - {fileID: 1101348949310247869}
  m_MotionSetCount: 0
  m_AnyStatePosition: {x: 0, y: -250, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1102 &1102257278810732253
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Death_Var01
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: a84cb20a9de688240af51c08b2c52f22, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Death
--- !u!1102 &1102304175694609578
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: New State
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 0}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101687438770511053
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102257278810732253}
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsDying
    m_EventTreshold: 0
    m_ExitTime: 0
  - m_ConditionMode: 6
    m_ConditionEvent: iDeathAnimIndex
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101818860798856916
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102776463251826760}
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsDying
    m_EventTreshold: 0
    m_ExitTime: 0
  - m_ConditionMode: 6
    m_ConditionEvent: iDeathAnimIndex
    m_EventTreshold: 1
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101342928645368159
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102073249736913588}
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsDying
    m_EventTreshold: 0
    m_ExitTime: 0
  - m_ConditionMode: 6
    m_ConditionEvent: iDeathAnimIndex
    m_EventTreshold: 2
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102776463251826760
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Exit_01
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 46251bc75a2f8de4b8a78b05fedd9ca2, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Death
--- !u!1102 &1102073249736913588
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Exit_02
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: d172cc6f4a9b7df4c82820a2c37882a6, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Death
--- !u!1101 &1101348949310247869
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102304175694609578}
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: IsDying
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
