%YAML 1.1
%TAG !u! tag:unity3d.com,2011:
--- !u!91 &9100000
AnimatorController:
  serializedVersion: 2
  m_ObjectHideFlags: 0
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: ClapTrapTutorController
  m_AnimatorParameters:
  - m_Name: fMoveSpeed
    m_Type: 1
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bShowLesson
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: IsCasual
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bOperatingPanel
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: bNervous
    m_Type: 4
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  - m_Name: tRespawn
    m_Type: 9
    m_DefaultFloat: 0
    m_DefaultInt: 0
    m_DefaultBool: 0
    m_Controller: {fileID: 9100000}
  m_AnimatorLayers:
  - serializedVersion: 3
    m_Name: Base Layer
    m_StateMachine: {fileID: 1107461948484850488}
    m_Mask: {fileID: 0}
    m_BlendingMode: 0
    m_SyncedLayerIndex: -1
    m_StateMachineMotionSetIndex: 0
    m_DefaultWeight: 0
    m_IKPass: 0
    m_SyncedLayerAffectsTiming: 0
    m_Controller: {fileID: 9100000}
--- !u!1107 &1107461948484850488
StateMachine:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Base Layer
  m_DefaultState: {fileID: 1102612127069589604}
  m_States:
  - {fileID: 1102612127069589604}
  - {fileID: 1102001934214079792}
  - {fileID: 1102678864714215332}
  - {fileID: 1102794288528003403}
  - {fileID: 1102821316879319133}
  - {fileID: 1102105976154478296}
  - {fileID: 1102620926411633808}
  - {fileID: 1102283419771537180}
  m_ChildStateMachine: []
  m_ChildStateMachinePosition: []
  m_OrderedTransitions:
  - first: {fileID: 1102612127069589604}
    second:
    - {fileID: 1101168305311209544}
    - {fileID: 1101480512476253403}
    - {fileID: 1101143219481654054}
    - {fileID: 1101235787229907444}
  - first: {fileID: 1102001934214079792}
    second:
    - {fileID: 1101305419222686814}
    - {fileID: 1101477006385314399}
    - {fileID: 1101544532313958469}
  - first: {fileID: 1102678864714215332}
    second:
    - {fileID: 1101046999344024283}
    - {fileID: 1101335798935923953}
  - first: {fileID: 1102794288528003403}
    second:
    - {fileID: 1101703217874922795}
    - {fileID: 1101487065568231251}
  - first: {fileID: 1102821316879319133}
    second:
    - {fileID: 1101914447530619640}
    - {fileID: 1101638588030857687}
    - {fileID: 1101130645660439455}
  - first: {fileID: 1102105976154478296}
    second:
    - {fileID: 1101503884317142872}
  - first: {fileID: 1102620926411633808}
    second:
    - {fileID: 1101946200429049393}
    - {fileID: 1101148602753692384}
  - first: {fileID: 1102283419771537180}
    second:
    - {fileID: 1101317183148936518}
  - first: {fileID: 0}
    second:
    - {fileID: 1101677882863261027}
    - {fileID: 1101479965632374444}
  m_MotionSetCount: 0
  m_AnyStatePosition: {x: 0, y: -250, z: 0}
  m_ParentStateMachinePosition: {x: 800, y: 20, z: 0}
--- !u!1102 &1102612127069589604
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Idle
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: e744019e298e3ea4b81c30e81e39a9b1, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag: Idle
--- !u!1101 &1101168305311209544
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102001934214079792}
  m_TransitionDuration: 0.14999999
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: fMoveSpeed
    m_EventTreshold: 0.1
    m_ExitTime: 0
  - m_ConditionMode: 1
    m_ConditionEvent: IsCasual
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101480512476253403
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102794288528003403}
  m_TransitionDuration: 0.044123746
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bShowLesson
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101143219481654054
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102821316879319133}
  m_TransitionDuration: 0.11986253
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 3
    m_ConditionEvent: fMoveSpeed
    m_EventTreshold: 0.1
    m_ExitTime: 0
  - m_ConditionMode: 2
    m_ConditionEvent: IsCasual
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101235787229907444
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102620926411633808}
  m_TransitionDuration: 0.053394686
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bNervous
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102001934214079792
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: Move
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: f897e7adde3bdb04b98e682a5ce362f7, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101305419222686814
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102612127069589604}
  m_TransitionDuration: 0.03409091
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: fMoveSpeed
    m_EventTreshold: 0.1
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101477006385314399
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102821316879319133}
  m_TransitionDuration: 0.03409091
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: IsCasual
    m_EventTreshold: 0
    m_ExitTime: 0
  - m_ConditionMode: 3
    m_ConditionEvent: fMoveSpeed
    m_EventTreshold: 0.1
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101544532313958469
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102620926411633808}
  m_TransitionDuration: 0.06662855
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bNervous
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102678864714215332
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: LessonAct2
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 4dc92644c085af547981245f939de183, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 500, y: 0, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101046999344024283
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102794288528003403}
  m_TransitionDuration: 0.030698722
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent:
    m_EventTreshold: 0
    m_ExitTime: 0.98
  - m_ConditionMode: 1
    m_ConditionEvent: bShowLesson
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101335798935923953
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102612127069589604}
  m_TransitionDuration: 0.012256623
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: bShowLesson
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102794288528003403
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: LessonAct1
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 2b899ae239f107f418220699bb1a209a, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101703217874922795
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102678864714215332}
  m_TransitionDuration: 0.07877632
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bShowLesson
    m_EventTreshold: 0
    m_ExitTime: 0
  - m_ConditionMode: 5
    m_ConditionEvent:
    m_EventTreshold: 0
    m_ExitTime: 0.98
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101487065568231251
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102612127069589604}
  m_TransitionDuration: 0.049585424
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: bShowLesson
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102821316879319133
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: ScaredMove
  m_Speed: 0.8
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: ab6549a7b98440f4e815d0aa5341cbbe, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101914447530619640
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102001934214079792}
  m_TransitionDuration: 0.055555556
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: IsCasual
    m_EventTreshold: 0
    m_ExitTime: 0
  - m_ConditionMode: 3
    m_ConditionEvent: fMoveSpeed
    m_EventTreshold: 0.1
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101638588030857687
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102612127069589604}
  m_TransitionDuration: 0.030698722
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 4
    m_ConditionEvent: fMoveSpeed
    m_EventTreshold: 0.1
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101130645660439455
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102620926411633808}
  m_TransitionDuration: 0.0979072
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bNervous
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102105976154478296
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: OperatingPanel
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: ef751553e5d90c04bb650a3eb0d9026c, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 500, y: 250, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101503884317142872
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102612127069589604}
  m_TransitionDuration: 0.13919151
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: bOperatingPanel
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102620926411633808
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: NervousStart
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 8ab3d2d1f2e2b4445840fec3b0e1462b, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 0, y: 500, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101946200429049393
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102612127069589604}
  m_TransitionDuration: 0.09225305
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: bNervous
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101148602753692384
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102283419771537180}
  m_TransitionDuration: 0.028032715
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 5
    m_ConditionEvent:
    m_EventTreshold: 0
    m_ExitTime: 0.98
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1102 &1102283419771537180
State:
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name: NervousLoop
  m_Speed: 1
  m_CycleOffset: 0
  m_Motions:
  - {fileID: 7400000, guid: 8507b5221fee6eb45aee75521af574c5, type: 2}
  m_ParentStateMachine: {fileID: 0}
  m_Position: {x: 250, y: 500, z: 0}
  m_IKOnFeet: 0
  m_Mirror: 0
  m_Tag:
--- !u!1101 &1101317183148936518
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102612127069589604}
  m_TransitionDuration: 0.19724776
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 2
    m_ConditionEvent: bNervous
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101677882863261027
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102105976154478296}
  m_TransitionDuration: 0.07334874
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: bOperatingPanel
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
--- !u!1101 &1101479965632374444
Transition:
  serializedVersion: 2
  m_ObjectHideFlags: 1
  m_PrefabParentObject: {fileID: 0}
  m_PrefabInternal: {fileID: 0}
  m_Name:
  m_SrcState: {fileID: 0}
  m_DstState: {fileID: 1102612127069589604}
  m_TransitionDuration: 0.1
  m_TransitionOffset: 0
  m_Conditions:
  - m_ConditionMode: 1
    m_ConditionEvent: tRespawn
    m_EventTreshold: 0
    m_ExitTime: 0
  m_Atomic: 1
  m_Solo: 0
  m_Mute: 0
  m_CanTransitionToSelf: 0
